--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ teloxide = { version = "0.10", features = ["macros", "auto-send"] }
 log = "0.4"
 pretty_env_logger = "0.4"
 tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
+rumqttc = "0.15.0"
+serde = "1.0.144"
+serde_json = "1.0.85"
+regex = "1.6.0"
