--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ serde = "1.0.144"
 serde_json = "1.0.85"
 regex = "1.6.0"
 lazy_static = "1.4.0"
+compound_duration = "1.2.0"
 
 [profile.release]
 panic = 'abort'
