--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ serde_json = "1.0.85"
 regex = "1.6.0"
 lazy_static = "1.4.0"
 compound_duration = "1.2.0"
+chrono = { version = "0.4.22", features = ["serde"] }
 
 [profile.release]
 panic = 'abort'
