--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 teloxide = { version = "0.10", features = ["macros", "auto-send"] }
 log = "0.4"
 pretty_env_logger = "0.4"
-tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
+tokio = { version =  "1.8", features = ["rt-multi-thread", "macros", "signal"] }
 rumqttc = "0.15.0"
 serde = "1.0.144"
 serde_json = "1.0.85"
