--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ regex = "1.6.0"
 lazy_static = "1.4.0"
 compound_duration = "1.2.0"
 chrono = { version = "0.4.22", features = ["serde"] }
+clap = { version = "3.2.21", features = ["derive"] }
 
 [profile.release]
 panic = 'abort'
