--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ log = "0.4"
 pretty_env_logger = "0.4"
 tokio = { version =  "1.8", features = ["rt-multi-thread", "macros", "signal"] }
 rumqttc = "0.15.0"
-serde = "1.0.144"
+serde = { version = "1.0.144", features = ["serde_derive"] }
 serde_json = "1.0.85"
 regex = "1.6.0"
 lazy_static = "1.4.0"
