--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ lazy_static = "1.4.0"
 compound_duration = "1.2.0"
 chrono = { version = "0.4.22", features = ["serde"] }
 clap = { version = "3.2.21", features = ["derive"] }
+derive_more = { version = "0.99.17", default-features = false, features = ["deref", "deref_mut"] }
 
 [profile.release]
 panic = 'abort'
