--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ compound_duration = "1.2.0"
 chrono = { version = "0.4.22", features = ["serde"] }
 clap = { version = "3.2.21", features = ["derive"] }
 derive_more = { version = "0.99.17", default-features = false, features = ["deref", "deref_mut"] }
+strum = { version = "0.24.1", features = ["derive"] }
 
 [profile.release]
 panic = 'abort'
