--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ chrono = { version = "0.4.22", features = ["serde"] }
 clap = { version = "3.2.21", features = ["derive"] }
 derive_more = { version = "0.99.17", default-features = false, features = ["deref", "deref_mut"] }
 strum = { version = "0.24.1", features = ["derive"] }
+thiserror = "1.0.35"
 
 [profile.release]
 panic = 'abort'
